--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -3,13 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" href="css/styles.css">
+ <link rel="stylesheet" href="styles.css">
 <title>Responsive Layout</title>
-<style>
 
-/********** Base styles **********/
-
-</style>
 </head>
 <body>
 <h1>Our Menu</h1>
